--- a/MarklogicProject/Views/Home/SearchResult.cshtml
+++ b/MarklogicProject/Views/Home/SearchResult.cshtml
@@ -6,21 +6,23 @@
 
 
 
-<div style="margin-top: 100px; margin-bottom:100px;">Результаты ввода:</div>
+<div style="margin-top: 100px; margin-bottom:100px;">Результаты ввода по запросу <span>@ViewBag.Response.QueryText</span>:</div>
 
 
 @foreach (var item in ViewBag.Response.SearchResult)
 {
+    <div style="margin-bottom:50px">
+        <div style="margin-top:10px;">Результат: @item.Score</div>
+        <div style="margin-top:10px;">Уверенность: @item.Confidence</div>
+        <div style="margin-top:10px;">Соответствие @item.Fitness</div>
+    </div>
     foreach (var i in item.Matches)
     {
         <div style="margin-top:10px"><a href="http://ec2-18-184-154-255.eu-central-1.compute.amazonaws.com:8000/@item.Href.Substring(1)">@item.Href</a></div>
         <div style="margin-top:10px">@i.Path</div>
-        <div style="margin-top:10px">
-            @foreach (var t in @i.MatchText)
-            {
-                <span> @t.Value</span>
-            }
-        </div>
-        <hr />}
+        <div style="margin-top:10px">@Html.Raw(i.MatchText[0])</div>
+
+    }
+    <hr />
 }
 
